--- a/assets/scss/5-modules/_page-title.scss
+++ b/assets/scss/5-modules/_page-title.scss
@@ -8,6 +8,9 @@
         padding-left: 220px;
         padding-top: 60px;
         padding-bottom: 80px;
+        @include media-down("lg"){
+            padding-left: 10px;
+        }
     }
     &.white {
         color: white;
