--- a/assets/scss/3-layout/_header.scss
+++ b/assets/scss/3-layout/_header.scss
@@ -200,6 +200,9 @@ header {
     right: 0;
     display: flex;
     align-items: center;
+    @include media-down("lg"){
+        padding: 0 30px;
+    }
     .container {
         display: flex;
         justify-content: space-between;
