--- a/assets/scss/6-pages/_tarihce.scss
+++ b/assets/scss/6-pages/_tarihce.scss
@@ -6,7 +6,7 @@
     background-repeat: no-repeat;
     padding-left: 20px;
     padding-right: 20px;
-    @include media-down("lg"){
+    @include media-down("lg") {
         background-image: none;
     }
     .container-history {
@@ -32,11 +32,14 @@
             display: block;
             cursor: pointer;
             transition: color $transition;
-            @include media-down("lg"){
+            @include media-down("lg") {
                 text-orientation: inherit;
                 writing-mode: initial;
                 transform: rotate(360deg);
                 text-align: center;
+            }
+            @include media-down("sm") {
+                font-size: 32px;
             }
         }
         &.swiper-slide-thumb-active {
@@ -44,7 +47,6 @@
                 color: $primary;
             }
         }
-      
     }
 }
 
@@ -79,7 +81,10 @@
         position: relative;
         animation-duration: 2.5s;
         @include media-down("lg") {
-        height: 400px;
+            height: 400px;
+        }
+        @include media-down("sm") {
+            height: 300px;
         }
     }
 }
