--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -962,6 +962,15 @@ body {
   overflow: hidden;
 }
 
+.padding-r-80-lg {
+  padding-right: 80px;
+}
+@media (max-width: 991px) {
+  .padding-r-80-lg {
+    padding-right: 0px;
+  }
+}
+
 section {
   padding: 100px 0;
 }
@@ -1484,6 +1493,9 @@ footer .socials a:hover {
     padding-left: 10px;
   }
 }
+.section-v1-content.owner {
+  padding-top: 0;
+}
 .section-v1-content.white {
   color: white;
 }
@@ -1509,6 +1521,7 @@ footer .socials a:hover {
 @media (max-width: 767px) {
   .section-v1-content .title {
     margin-bottom: 20px;
+    font-size: 30px;
   }
 }
 
@@ -2362,6 +2375,49 @@ footer .socials a:hover {
 @media (max-width: 575px) {
   .img-capsule-history img {
     height: 300px;
+  }
+}
+
+.owner-container {
+  max-width: 1670px;
+}
+
+.setup-img {
+  width: 800px;
+  height: 800px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  display: block;
+}
+@media (max-width: 991px) {
+  .setup-img {
+    width: 100%;
+    height: 400px;
+  }
+}
+@media (max-width: 575px) {
+  .setup-img {
+    height: 250px;
+  }
+}
+
+.owner-img {
+  width: 900px;
+  height: 568px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  display: block;
+}
+@media (max-width: 991px) {
+  .owner-img {
+    height: 400px;
+    width: 90%;
+  }
+}
+@media (max-width: 575px) {
+  .owner-img {
+    width: 100%;
+    height: 250px;
   }
 }
 
