--- a/assets/scss/1-base/_helpers.scss
+++ b/assets/scss/1-base/_helpers.scss
@@ -126,3 +126,9 @@ $sizes: ('10', '20', '30', '40', '50', '60', '70', '80', '90', '100');
 .overflow-hidden{
     overflow: hidden;
 }
+.padding-r-80-lg{
+    padding-right: 80px;
+    @include media-down("lg"){
+        padding-right: 0px;
+    }
+}
