--- a/assets/scss/6-pages/_tarihce.scss
+++ b/assets/scss/6-pages/_tarihce.scss
@@ -88,3 +88,36 @@
         }
     }
 }
+
+.owner-container{
+    max-width: 1670px;
+}
+.setup-img{
+    width: 800px;
+    height: 800px;
+    object-fit: cover;
+    display: block;
+    @include media-down("lg"){
+        width: 100%;
+        height: 400px;
+    }
+    @include media-down("sm"){
+        height: 250px;
+    }
+}
+
+.owner-img{
+    width: 900px;
+    height: 568px;
+    object-fit: cover;
+    display: block;
+    @include media-down("lg"){
+        height: 400px;
+        width: 90%;
+    }
+    @include media-down("sm"){
+        width: 100%;
+        
+        height: 250px;
+    }  
+}
