--- a/assets/scss/1-base/_helpers.scss
+++ b/assets/scss/1-base/_helpers.scss
@@ -132,3 +132,7 @@ $sizes: ('10', '20', '30', '40', '50', '60', '70', '80', '90', '100');
         padding-right: 0px;
     }
 }
+
+.fs-50{
+    font-size: 50px;
+}
