--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -27,6 +27,7 @@
 @import '6-pages/index';
 @import '6-pages/about';
 @import '6-pages/tarihce';
+@import '6-pages/yonetim-kurulu';
 // Performance
 @import '7-performance/performance';
 
