--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -28,6 +28,7 @@
 @import '6-pages/about';
 @import '6-pages/tarihce';
 @import '6-pages/yonetim-kurulu';
+@import '6-pages/iletisim';
 // Performance
 @import '7-performance/performance';
 
