--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1410,9 +1410,21 @@ footer .socials a:hover {
   padding: 20px;
   min-width: 230px;
   box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+  transition: 0.5s;
+}
+.btn-primary:hover {
+  background-color: rgba(217, 133, 99, 0.6);
 }
 .btn-primary i {
   font-size: 18px;
+}
+.btn-primary.position-icon {
+  position: relative;
+}
+.btn-primary.position-icon i {
+  position: absolute;
+  right: 16px;
+  font-size: 24px;
 }
 
 .btn-blur {
@@ -2479,6 +2491,159 @@ footer .socials a:hover {
 @media (max-width: 1399px) {
   .manager-card {
     padding: 22px;
+  }
+}
+.contact-details .title {
+  font: 500 38px "barlow";
+  margin-bottom: 60px;
+}
+.contact-details .infos {
+  display: flex;
+  flex-direction: column;
+  gap: 26px;
+  margin-bottom: 50px;
+}
+.contact-details .infos .item {
+  display: flex;
+  gap: 8px;
+  align-items: center;
+  font: 500 18px "barlow";
+}
+.contact-details .infos .item i {
+  font-size: 28px;
+  color: #D98563;
+}
+.contact-details .socials {
+  display: flex;
+  gap: 17px;
+  font-size: 18px;
+  margin-bottom: 40px;
+}
+.contact-details .socials a {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: solid 1px rgba(181, 181, 181, 0.17);
+  transition: 0.5s;
+  width: 31px;
+  height: 31px;
+  border-radius: 3px;
+  color: #D98563;
+}
+.contact-details .socials a:hover {
+  background-color: rgba(181, 181, 181, 0.17);
+}
+.contact-details .layer-icon {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+.contact-details .layer-icon i {
+  font-size: 32px;
+  color: #D98563;
+}
+
+.route-section-contact {
+  padding-top: 240px;
+  padding-bottom: 73px;
+}
+
+.map-frame {
+  max-width: 670px;
+  width: 100%;
+  height: 100%;
+  filter: grayscale(100%);
+}
+
+.contact-container {
+  max-width: 1300px;
+  margin: auto;
+}
+
+.contact-form-section {
+  background-image: url(../img/bg-seven.png), url(../img/bg-seven.png), url(../img/world-left.png), url(../img/world-right.png);
+  background-repeat: no-repeat;
+  background-size: 1100px, 1100px, auto, auto;
+  background-position: -80% -170%, 160% 552%, left 30%, right;
+}
+@media (max-width: 1399px) {
+  .contact-form-section {
+    background-image: none;
+  }
+}
+
+.contact-form-container {
+  max-width: 950px;
+  margin: auto;
+}
+
+.contact-form .inputs {
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+}
+.contact-form .inputs * {
+  background-color: #F8F8F8;
+  padding: 18px 23px;
+  font: 500 16px "barlow";
+}
+.contact-form .inputs *::-moz-placeholder {
+  color: rgba(46, 46, 46, 0.5);
+}
+.contact-form .inputs *:-ms-input-placeholder {
+  color: rgba(46, 46, 46, 0.5);
+}
+.contact-form .inputs *::placeholder {
+  color: rgba(46, 46, 46, 0.5);
+}
+
+.radio-box {
+  text-align: center;
+  padding: 20px;
+  border: solid 1px #F5F5F5;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  gap: 13px;
+  cursor: pointer;
+  font: 500 18px "barlow";
+  transition: 0.5s;
+}
+.radio-box:hover {
+  background-color: #F5F5F5;
+}
+
+.radioAndText {
+  display: flex;
+  align-items: center;
+  gap: 14px;
+  cursor: pointer;
+}
+@media (max-width: 575px) {
+  .radioAndText {
+    align-items: flex-start;
+  }
+}
+
+.primary-radio {
+  min-width: 26px;
+  min-height: 26px;
+  accent-color: #c97654;
+  cursor: pointer;
+}
+
+@media (max-width: 991px) {
+  .route-section-contact {
+    padding-top: 190px;
+  }
+  .map-frame {
+    height: 400px;
+    max-width: 100%;
+  }
+}
+@media (max-width: 575px) {
+  .route-section-contact {
+    padding-top: 120px;
   }
 }
 .morphext .animated {
