--- a/assets/scss/4-components/_buttons.scss
+++ b/assets/scss/4-components/_buttons.scss
@@ -9,8 +9,20 @@
     padding: 20px;
     min-width: 230px;
     box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+    transition: $transition;
+    &:hover{
+        background-color: rgba($color: $primary, $alpha: .6);
+    }
     i {
         font-size: 18px;
+    }
+    &.position-icon{
+        position: relative;
+        i{
+            position: absolute;
+            right: 16px;
+            font-size: 24px;
+        }
     }
 }
 
