--- a/assets/scss/5-modules/_page-title.scss
+++ b/assets/scss/5-modules/_page-title.scss
@@ -18,6 +18,10 @@
     &.white {
         color: white;
     }
+    &.blog-hero{
+        padding-bottom: 0px;
+      padding-top: 20px;
+    }
     @media (max-width: 1600px) {
         padding-left: 20px;
     }
