--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -22,6 +22,7 @@
 @import '5-modules/page-title';
 @import '5-modules/animated-cursor';
 @import '5-modules/user-modals';
+@import '5-modules/blog-card';
 
 // Pages
 @import '6-pages/index';
@@ -29,6 +30,8 @@
 @import '6-pages/tarihce';
 @import '6-pages/yonetim-kurulu';
 @import '6-pages/iletisim';
+@import '6-pages/blog';
+@import '6-pages/blog-detail';
 // Performance
 @import '7-performance/performance';
 
