--- a/assets/scss/4-components/_buttons.scss
+++ b/assets/scss/4-components/_buttons.scss
@@ -10,6 +10,7 @@
     min-width: 230px;
     box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
     transition: $transition;
+    cursor: pointer;
     &:hover{
         background-color: rgba($color: $primary, $alpha: .6);
     }
@@ -37,6 +38,7 @@
     min-width: 230px;
     backdrop-filter: blur(10px);
     transition: $transition;
+    cursor: pointer;
     &.bordered {
         border: solid 2px $white;
     }
@@ -84,6 +86,7 @@
     font-size: 24px;
     color: $primary;
     transition: $transition;
+    cursor: pointer;
     &:hover {
         background-color: rgba($color: $light, $alpha: 0.5);
     }
