--- a/assets/scss/3-layout/_global.scss
+++ b/assets/scss/3-layout/_global.scss
@@ -3,6 +3,11 @@ section {
     @include media-down("lg") {
         padding: 50px 0;
     }
+    &.pt-0-lg{
+        @include media-down("lg") {
+            padding: 0 0 50px 0;
+        }
+    }
 }
 
 .pagination-default {
