--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -32,6 +32,8 @@
 @import '6-pages/iletisim';
 @import '6-pages/blog';
 @import '6-pages/blog-detail';
+@import '6-pages/projects';
+@import '6-pages/project-detail';
 // Performance
 @import '7-performance/performance';
 
