--- a/assets/scss/5-modules/_page-title.scss
+++ b/assets/scss/5-modules/_page-title.scss
@@ -68,3 +68,15 @@
         font-size: 30px;
     }
 }
+
+.primary-title{
+    font: 600 18px $barlow;
+    display: flex;
+    align-items: center;
+    gap: 8px;
+    color: $primary;
+    margin-bottom: 30px;
+    i{
+        font-size: 32px;
+    }
+}
