--- a/assets/scss/6-pages/_project-detail.scss
+++ b/assets/scss/6-pages/_project-detail.scss
@@ -221,27 +221,46 @@
     }
 }
 
-.project-detail-content{
-    &.container-content{
+.project-detail-content {
+    &.container-content {
         margin: auto;
         max-width: 950px;
     }
-    h4{
+    h4 {
         font-size: 32px;
         font-weight: 400;
         margin-bottom: 40px;
     }
-    p{
+    p {
         margin-bottom: 40px;
     }
-
 }
-.project-detail-preview-img{
+.project-detail-preview-img {
     width: 100%;
     height: 650px;
-
 }
-.project-detail-content-container{
+.project-detail-content-container {
     margin: auto;
     max-width: 1300px;
+}
+.project-detail-galery {
+    display: flex;
+    flex-wrap: wrap;
+    .image {
+       flex: 20%;
+        overflow: hidden;
+        cursor: pointer;
+        display: flex;
+        &:hover{
+            img{
+                transform: scale(1.2);
+            }
+        }
+        img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            transition: $transition;
+        }
+    }
 }
