--- a/assets/scss/1-base/_variables.scss
+++ b/assets/scss/1-base/_variables.scss
@@ -13,8 +13,8 @@ $colors: (
     "light-100": #F8F8F8,
     "light-200": #F6F5F3,
     "light-creme": #EDEDED,
-    "ghost": #ffffff,
-    "white": #E6E6E6,
+    "ghost": #E6E6E6,
+    "white": #ffffff,
 );
 
 $primary: #D98563;
